--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -60,7 +60,7 @@ h4,
 h5,
 h6 {
   font-family: "nunitosemibold";
-  margin: 0;
+  margin: 0 !important;
 }
 
 h6 {
@@ -89,16 +89,26 @@ input:focus {
   outline: none;
 }
 
+
 .btn {
-  font-family: "nunitosemibold";
-  border-radius: 12px;
-  padding: 12px 36px;
-  line-height: 22px;
-  font-size: 16px;
-  transition: all 0.5s;
-  -moz-box-shadow: 0px 0px 0px rgba(68, 68, 68, 0.1);
-  -webkit-box-shadow: 0px 0px 0px rgba(68, 68, 68, 0.1);
-  box-shadow: 0px 0px 0px rgba(68, 68, 68, 0.1);
+  font-family: "nunitosemibold" !important;
+  border-radius: 12px !important;
+  padding: 12px 36px !important;
+  line-height: 22px !important;
+  font-size: 16px !important;
+  transition: all 0.5s !important;
+  -moz-box-shadow: 0px 0px 0px rgba(68, 68, 68, 0.1) !important; 
+  -webkit-box-shadow: 0px 0px 0px rgba(68, 68, 68, 0.1) !important;
+  box-shadow: 0px 0px 0px rgba(68, 68, 68, 0.1) !important;
+  display: initial !important;
+    font-weight: initial !important;
+    color: initial !important;
+    text-align: initial !important;
+    vertical-align: initial !important;
+    -webkit-user-select: initial !important;
+    user-select: initial !important;
+    background-color: initial !important;
+    border: initial !important;
 }
 
 a.btn-lightblue-primary:hover {
@@ -3574,7 +3584,7 @@ a.btn-lightblue-primary:hover {
   color: #041d36;
   margin: 0;
   display: inline-block;
-  margin-right: 60px;
+  margin-right: 60px !important;
   position: relative;
 }
 
@@ -3621,7 +3631,7 @@ a.btn-lightblue-primary:hover {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  padding: 25px 0;
+  padding: 25px 0 !important;
 }
 
 .booking-form-col-6 {
@@ -3633,32 +3643,32 @@ a.btn-lightblue-primary:hover {
 }
 
 .booking-form-col-12 {
-  display: flex;
-  flex-direction: column;
-  flex: 0 0 100%;
-  padding: 0 40px;
+  display: flex !important;
+  flex-direction: column !important;
+  flex: 0 0 100% !important;
+  padding: 0 40px !important;
 }
 
 .booking-form-box h5 {
-  font-family: "nunitosemibold";
-  font-size: 18px;
-  line-height: 25px;
-  color: #4872f4;
-  margin: 0 0 20px 0;
-  text-transform: uppercase;
+  font-family: "nunitosemibold" !important;
+  font-size: 18px !important;
+  line-height: 25px !important;
+  color: #4872f4 !important;
+  margin: 0 0 20px 0 !important;
+  text-transform: uppercase !important;
 }
 
 .booking-form-box h6 {
-  font-family: "nunitoregular";
-  font-size: 16px;
-  line-height: 22px;
-  color: #4872f4;
-  margin: 0 0 15px 0;
+  font-family: "nunitoregular" !important;
+  font-size: 16px !important;
+  line-height: 22px !important;
+  color: #4872f4 !important;
+  margin: 0 0 15px 0 !important;
 }
 
 .booking-form-box .btn {
-  margin: auto auto 0 0;
-  min-width: 130px;
+  margin: auto auto 0 0 !important;
+  min-width: 130px !important;
 }
 
 .btn.add-blue-btn {
