--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,14 @@
   height: 100vh;
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
+
 .mandate-star:after {
   content: "*";
   color: #ff5e5e;
