--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media screen and (min-width: 600px) and (max-width: 1400px) {
+  .new-page-bpdy-content {
+    margin-top: 35px;
+  }
+
+  .bookingApprovalBody table{
+    font-size: 14px !important;
+    color: red
+  }
+}
